<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">zhf</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="login_email_hint">必须使用有效的Email</string>
	<string name="login_pwd_hint">密码</string>
	<string name="register_pwd_again_hint">再输入一遍密码</string>
	<string name="register_invite_hint">邀请人Email账号(选填)</string> 
	<string name="login_text">登录</string>
	<string name="register_text">注册</string>
	<string name="login_register_link">没有帐号？ <a href="#" mce_href="#">点击注册</a></string>
	<string name="back_text">返回</string>
	<string name="guagua_btn_text">开始刮奖</string>	
</resources>
